fix footer covering page content
stinky footer

--- a/css/ipl.css
+++ b/css/ipl.css
@@ -444,7 +444,7 @@ footer{
 }
 
 .padding-space{
-    padding: 2%;
+    padding: 2rem;
 }
 
 .twitter-link:visited{
